--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "install": "^0.13.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
