Add author and license to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "menu-card-showcase",
+  "author": "afkdev",
   "version": "0.1.0",
+  "license": "MIT"
   "private": true,
   "scripts": {
     "dev": "next dev",
